Rendering for GoogleMaps extended

--- a/views/templates/clublist.html
+++ b/views/templates/clublist.html
@@ -69,7 +69,20 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 <!-- ###CLUB_LIST### end -->
 
 
+<!-- ----------------------------------------
+Template for bubble in GoogleMaps
+------------------------------------------ -->
+
+<!-- ###CLUB_MAP_MARKER### begin-->
+<h2>###CLUB_NAME###</h2>
+###CLUB_LOGO###
+<!-- ###CLUB_MAP_MARKER### end-->
+
+
+<!-- ----------------------------------------
 Details-View for clubs
+------------------------------------------ -->
+
 <!-- ###CLUB_VIEW### begin-->
 
 <div id="t3sports-clubview">
