--- a/views/templates/stadiums.html
+++ b/views/templates/stadiums.html
@@ -45,8 +45,20 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 <!-- ###PAGEBROWSER### END -->
 ###STADIUMS###
 
+###STADIUMMAP###
 
-<!-- ###STADIUM_LIST### begin-->
+<!-- ###STADIUM_LIST### end-->
+
+
+<!-- ----------------------------------------
+Template for bubble in GoogleMaps
+------------------------------------------ -->
+
+<!-- ###STADIUM_MAP_MARKER### begin-->
+<h2>###STADIUM_NAME###</h2>
+<b>###LABEL_CAPACITY###: </b>###STADIUM_CAPACITY###<br />
+###STADIUM_LOGO###
+<!-- ###STADIUM_MAP_MARKER### end-->
 
 
 
