Stadium details with GoogleMaps integration

--- a/views/templates/stadiums.html
+++ b/views/templates/stadiums.html
@@ -81,6 +81,9 @@ Template for single view
 <h3>###LABEL_PICTURES###</h3>
 ###STADIUM_PICTURES###
 
+Map###STADIUM_MAP###
+fertig
+
 ###STADIUM_DESCRIPTION2###
 
 
