--- a/views/templates/teamlist.html
+++ b/views/templates/teamlist.html
@@ -81,6 +81,19 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 <!-- ###TEAMS### end -->
 
+###TEAMMAP###
+
 <!-- ###TEAM_LIST### end -->
+
+
+<!-- ----------------------------------------
+Template for bubble in GoogleMaps
+------------------------------------------ -->
+
+<!-- ###TEAM_MAP_MARKER### begin-->
+<h2>###TEAM_NAME###</h2>
+###TEAM_LOGO###
+<!-- ###TEAM_MAP_MARKER### end-->
+
 </body>
 </html>
