--- a/views/templates/clublist.html
+++ b/views/templates/clublist.html
@@ -27,6 +27,7 @@ Einige verfügbare Tags:
   <h2>###CLUB_LOGO### ###CLUB_SHOWLINK######CLUB_NAME######CLUB_SHOWLINK###</h2>
   <p>Webseite: ###CLUB_WWW###<br />
   Mail: ###CLUB_EMAIL###<br />
+  Entfernung: ###CLUB_DISTANCE###<br />
   </p>
 
 </div>
