--- a/views/templates/stadiums.html
+++ b/views/templates/stadiums.html
@@ -14,6 +14,8 @@ Template for list view
 ###STADIUMS###
 ###STADIUM###
 <h2>###STADIUM_SHOWLINK######STADIUM_NAME######STADIUM_SHOWLINK###</h2>
+<p>###LABEL_DISTANCE###: ###STADIUM_DISTANCE###
+</p>
 ###STADIUM###
 
 <!-- ###PAGEBROWSER### START -->
