Template extended for T3sportstats

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -133,6 +133,13 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 Bilder: ###PROFILE_PICTURES###
 
+###PROFILE_STATS_LEAGUE###
+<h2>Spielerstatistik (needs T3sportstats)</h2>
+Spiele: ###PROFILE_STATS_LEAGUE_PLAYED###
+
+###PROFILE_STATS_LEAGUE###
+
+
 </div>
 <!-- ###PROFILE_VIEW### end-->
 
