More stats data

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -135,7 +135,9 @@ Bilder: ###PROFILE_PICTURES###
 
 ###PROFILE_STATS_LEAGUE###
 <h2>Spielerstatistik (needs T3sportstats)</h2>
-Spiele: ###PROFILE_STATS_LEAGUE_PLAYED###
+Spiele: ###PROFILE_STATS_LEAGUE_PLAYED###<br />
+Minuten: ###PROFILE_STATS_LEAGUE_PLAYTIME###<br />
+Tore: ###PROFILE_STATS_LEAGUE_GOALS###<br />
 
 ###PROFILE_STATS_LEAGUE###
 
