--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -112,6 +112,13 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
   <td class="prof_value">###PROFILE_POSITION###</td>
 </tr>
 <tr>
+  <td class="prof_head">Trikotnummer (aus TeamNote):</td>
+  <td class="prof_value">###PROFILE_TNTRIKOT###</td>
+</tr>
+
+
+
+<tr>
   <td class="prof_head">Vertragsdauer:</td>
   <td class="prof_value">###PROFILE_DURATION_OF_CONTRACT###</td>
 </tr>
