Verlinkung der Statistiken

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -87,7 +87,7 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 <!-- ###PROFILE_VIEW### begin -->
 <div id="cfcleague-profileview">
-  <h1>###PROFILE_FIRST_NAME### ###PROFILE_LAST_NAME###</h1>
+  <h1>###PROFILE_DCNAME###</h1>
 
 <table style="width:480px">
 <tr>
@@ -142,9 +142,9 @@ Bilder: ###PROFILE_PICTURES###
 
 ###PROFILE_STATS_LEAGUE###
 <h2>Spielerstatistik (needs T3sportstats)</h2>
-Spiele: ###PROFILE_STATS_LEAGUE_PLAYED###<br />
+Spiele: ###PROFILE_STATS_LEAGUE_PLAYEDLINK### ###PROFILE_STATS_LEAGUE_PLAYED### ###PROFILE_STATS_LEAGUE_PLAYEDLINK###<br />
 Minuten: ###PROFILE_STATS_LEAGUE_PLAYTIME###<br />
-Tore: ###PROFILE_STATS_LEAGUE_GOALS###<br />
+Tore: ###PROFILE_STATS_LEAGUE_GOALSLINK### ###PROFILE_STATS_LEAGUE_GOALS### ###PROFILE_STATS_LEAGUE_GOALSLINK###<br />
 
 ###PROFILE_STATS_LEAGUE###
 
