Output of profile data in filter

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -33,7 +33,15 @@ für die Gastmannschaft.
 <!-- ###MATCHTABLE### start -->
 ###MATCHS###
 ###FILTERITEMS###
+###PLAYER###
 Spielplan für ###PLAYER_DCNAME###
+###PLAYER###
+###COACH###
+Spielplan für den Trainer ###COACH_DCNAME###
+###COACH###
+###REFEREE###
+Spielplan für Schiedsrichter ###REFEREE_DCNAME###
+###REFEREE###
 ###FILTERITEMS###
 
 <table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
