Example for referee stats

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -148,6 +148,15 @@ Tore: ###PROFILE_STATS_LEAGUE_GOALSLINK### ###PROFILE_STATS_LEAGUE_GOALS### ###P
 
 ###PROFILE_STATS_LEAGUE###
 
+###PROFILE_STATS_REFEREE###
+<h2>Schiedsrichterstatistik (needs T3sportstats)</h2>
+Spiele: ###PROFILE_STATS_REFEREE_PLAYEDLINK### ###PROFILE_STATS_REFEREE_PLAYED### ###PROFILE_STATS_REFEREE_PLAYEDLINK###<br />
+als Schiedsrichter: ###PROFILE_STATS_REFEREE_MAINREF###<br />
+als Assistent: ###PROFILE_STATS_REFEREE_ASSIST###<br />
+Elfmeter: ###PROFILE_STATS_REFEREE_PENALTY###<br />
+Karten (G/GR/R): ###PROFILE_STATS_REFEREE_CARDYELLOW###/###PROFILE_STATS_REFEREE_CARDYR###/###PROFILE_STATS_REFEREE_CARDRED### <br />
+
+###PROFILE_STATS_REFEREE###
 
 </div>
 <!-- ###PROFILE_VIEW### end-->
