#48: HTML-Template for match status -1 included

--- a/views/templates/matchcrosstable.html
+++ b/views/templates/matchcrosstable.html
@@ -35,9 +35,9 @@
 ###LABEL_MATCHSTATUS_POSTPONED###
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
 
-<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
+<!-- ###RESULT_STATUS_-1### Ergebnis bei ungültig -->
 ###LABEL_MATCHSTATUS_INVALID###
-<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
+<!-- ###RESULT_STATUS_-1### Ergebnis bei ungültig -->
 
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 ###MATCH_GOALS_HOME### : ###MATCH_GOALS_GUEST###
