--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -64,9 +64,9 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 ###LABEL_MATCHSTATUS_POSTPONED###
 <!-- ###RESULT_STATUS_-10### Ergebnis bei Spielverlegung -->
 
-<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
+<!-- ###RESULT_STATUS_-1### Ergebnis bei ungültig -->
 ###LABEL_MATCHSTATUS_INVALID###
-<!-- ###RESULT_STATUS_-1### Ergebnis bei Spielverlegung -->
+<!-- ###RESULT_STATUS_-1### Ergebnis bei ungültig -->
 
 <!-- ###RESULT_STATUS_1### Ergebnis während des Spiels -->
 ###MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST###
