--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -43,6 +43,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 <!-- ###LEAGUE_TABLE### start -->
 
+<h2>###LEAGUE_NAME###</h2>
 
 <!-- ###CONTROLS### start -->
 <div class="cfcleague-scopeselection">
