More league table stuff

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -49,24 +49,24 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 <div class="cfcleague-scopeselection">
 ###CONTROL_TABLETYPE###
 <p>
-###CONTROL_TABLETYPE_NORMAL_LINK### ###CONTROL_TABLETYPE_NORMAL### ###CONTROL_TABLETYPE_NORMAL_LINK###
-###CONTROL_TABLETYPE_HOME_LINK### ###CONTROL_TABLETYPE_HOME### ###CONTROL_TABLETYPE_HOME_LINK###
-###CONTROL_TABLETYPE_AWAY_LINK### ###CONTROL_TABLETYPE_AWAY### ###CONTROL_TABLETYPE_AWAY_LINK###
+###CONTROL_TABLETYPE_NORMAL_LINK### ###LABEL_TABLETYPE_NORMAL### ###CONTROL_TABLETYPE_NORMAL_LINK###
+###CONTROL_TABLETYPE_HOME_LINK### ###LABEL_TABLETYPE_HOME### ###CONTROL_TABLETYPE_HOME_LINK###
+###CONTROL_TABLETYPE_AWAY_LINK### ###LABEL_TABLETYPE_AWAY### ###CONTROL_TABLETYPE_AWAY_LINK###
 </p>
 ###CONTROL_TABLETYPE###
 
 ###CONTROL_TABLESCOPE###
 <p>
-###CONTROL_TABLESCOPE_NORMAL_LINK### ###CONTROL_TABLESCOPE_NORMAL### ###CONTROL_TABLESCOPE_NORMAL_LINK### 
-###CONTROL_TABLESCOPE_FIRST_LINK### ###CONTROL_TABLESCOPE_FIRST### ###CONTROL_TABLESCOPE_FIRST_LINK### 
-###CONTROL_TABLESCOPE_SECOND_LINK### ###CONTROL_TABLESCOPE_SECOND### ###CONTROL_TABLESCOPE_SECOND_LINK###
+###CONTROL_TABLESCOPE_NORMAL_LINK### ###LABEL_TABLESCOPE_NORMAL### ###CONTROL_TABLESCOPE_NORMAL_LINK### 
+###CONTROL_TABLESCOPE_FIRST_LINK### ###LABEL_TABLESCOPE_FIRST### ###CONTROL_TABLESCOPE_FIRST_LINK### 
+###CONTROL_TABLESCOPE_SECOND_LINK### ###LABEL_TABLESCOPE_SECOND### ###CONTROL_TABLESCOPE_SECOND_LINK###
 </p>
 ###CONTROL_TABLESCOPE###
 
 ###CONTROL_POINTSYSTEM###
 <p>
-###CONTROL_POINTSYSTEM_POINT3_LINK### ###CONTROL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
-###CONTROL_POINTSYSTEM_POINT2_LINK### ###CONTROL_POINTSYSTEM_POINT2### ###CONTROL_POINTSYSTEM_POINT2_LINK###
+###CONTROL_POINTSYSTEM_POINT3_LINK### ###LABEL_POINTSYSTEM_POINT3### ###CONTROL_POINTSYSTEM_POINT3_LINK###
+###CONTROL_POINTSYSTEM_POINT2_LINK### ###LABEL_POINTSYSTEM_POINT2### ###CONTROL_POINTSYSTEM_POINT2_LINK###
 </p>
 ###CONTROL_POINTSYSTEM###
 
