Marker for team name

--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -39,7 +39,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 
 <!-- ###TEAM_VIEW### begin-->
 <div id="cfcleague-teamview">
-
+<h1>###TEAM_NAME###</h1>
 ###TEAM_LOGO###
 
 <p class="cfcleague-teamview-firstpic">###TEAM_FIRSTPICTURE###</p>
