It is possible to display set results in matchtable and match report

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -77,6 +77,15 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 ###MATCH_REPORTLINK######MATCH_GOALS_HOME###&nbsp;:&nbsp;###MATCH_GOALS_GUEST### ###MATCH_DCRESULTSUFFIX######MATCH_REPORTLINK###
 <!-- ###RESULT_STATUS_2### Ergebnis nach Spielende -->
 <br />###MATCH_ADDINFO###
+###MATCH_SETRESULTS###
+<h3>###LABEL_SETS###</h3>
+<ul>
+###MATCH_SETRESULT###
+<li>###MATCH_SETRESULT_SET###.###LABEL_SET###: ###MATCH_SETRESULT_POINTSHOME### : ###MATCH_SETRESULT_POINTSGUEST###</li>
+###MATCH_SETRESULT###
+</ul>
+###MATCH_SETRESULTS###
+
 </td>
 </tr>
 
