Integration of FAL started

--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -45,12 +45,12 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 ###REFEREE###
 ###FILTERITEMS###
 
-<table cellspacing="0" cellpadding="0" class="cfcleague-matchtable">
+<table class="table table-striped table-condensed">
 ###MATCH###
-<tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowinfo">
+<tr class="cfcleague-matchtable-row###MATCH_ROLL###">
 <td colspan="10">###MATCH_DATE### (###MATCH_COMPETITION_LOGO######MATCH_COMPETITION_SHORT_NAME###)(###MATCH_UID###)</td>
 </tr>
-<tr class="cfcleague-matchtable-row###MATCH_ROLL### cfcleague-matchtable-rowmatch">
+<tr class="cfcleague-matchtable-row###MATCH_ROLL###">
 <td>###MATCH_ROUND_NAME###</td>
 <td>###MATCH_HOME_LOGO### ###MATCH_HOME_SHOWTEAMLINK######MATCH_HOME_NAME######MATCH_HOME_SHOWTEAMLINK###</td>
 <td>-</td>
