Club logo support for FAL

--- a/views/templates/teamview.html
+++ b/views/templates/teamview.html
@@ -38,7 +38,7 @@ Wenn in der Teamnotiz also den Marker "position" definiert ist, dann gilt dieser
 </pre>
 
 <!-- ###TEAM_VIEW### begin-->
-<div id="cfcleague-teamview">
+<div class="well">
 <h1>###TEAM_NAME###</h1>
 ###TEAM_LOGO###
 
