#74: 3 point system for volleyball

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -92,7 +92,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 ###ROWS###
 <div class="cfcleague-leaguetable">
-<table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
+<table class="table table-striped">
 <tr>
   <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_GOALS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
 </tr>
@@ -245,7 +245,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 ###ROWS###
 <div class="cfcleague-leaguetable">
-<table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
+<table class="table table-striped">
 <tr>
   <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_BALLS###</th><th>###LABEL_DIFF###</th><th>###LABEL_SETS###</th><th>###LABEL_POINTS###</th>
 </tr>
