#74: 3 point system for volleyball finished

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -168,7 +168,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 
 ###ROWS###
 <div class="cfcleague-leaguetable">
-<table cellspacing="0" cellpadding="0" class="cfcleague-leaguetable">
+<table class="table table-striped">
 <tr>
   <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>OTs</th><th>Ps</th><th>Pn</th><th>OTn</th><th>###LABEL_GOALS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
 </tr>
@@ -247,7 +247,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 <div class="cfcleague-leaguetable">
 <table class="table table-striped">
 <tr>
-  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_BALLS###</th><th>###LABEL_DIFF###</th><th>###LABEL_SETS###</th><th>###LABEL_POINTS###</th>
+  <th>Pl.</th><th>###LABEL_CLUB###</th><th>###LABEL_MATCHES###</th><th>S</th><th>U</th><th>N</th><th>###LABEL_BALLS###</th><th>###LABEL_DIFF###</th><th>###LABEL_SETS###</th><th>###LABEL_DIFF###</th><th>###LABEL_POINTS###</th>
 </tr>
 
 ###ROW###
@@ -259,8 +259,9 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
   <td>###ROW_DRAWCOUNT###</td>
   <td>###ROW_LOSECOUNT###</td>
   <td>###ROW_BALLS1###:###ROW_BALLS2###</td>
-  <td>###ROW_BALLS_DIFF###</td>
+  <td>###ROW_BALLS_DIFF######ROW_BALLS_QUOT###</td>
   <td>###ROW_SETS1###:###ROW_SETS2###</td>
+  <td>###ROW_SETS_DIFF######ROW_SETS_QUOT###</td>
   <td>###ROW_POINTS######ROW_POINTS2###</td>
 </tr>
 ###ROW###
