Doc for Link-Marker fixed

--- a/views/templates/livetickerlist.html
+++ b/views/templates/livetickerlist.html
@@ -6,8 +6,8 @@
 <p>
 This is the template for live ticker match
 Markers
-###MATCH_TICKER_LINK### - ticker site link
-###MATCH_TICKER_LINK_URL### - url to ticker site
+###MATCH_TICKERLINK### - ticker site link
+###MATCH_TICKERLINKURL### - url to ticker site
 ###MATCH_[colname]### - value of match column (same as for matchtable)
 </p>
 
