Render current team in profile view. Use different configurations for players, coaches and supporters in prev/next links

--- a/views/templates/profileview.html
+++ b/views/templates/profileview.html
@@ -121,6 +121,23 @@ Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER###
 
 Bilder: ###PROFILE_PICTURES###
 
+###TEAM###
+<p>
+###PROFILE_DCNAME### ist Teil der Mannschaft von <strong>###TEAM_NAME###</strong>.
+Weitere Spieler sind<br/>
+###TEAM_PLAYERS###
+<ul>
+###TEAM_PLAYER###
+<li>###TEAM_PLAYER_SHOWPROFILELINK######TEAM_PLAYER_DCNAME######TEAM_PLAYER_SHOWPROFILELINK### (###TEAM_PLAYER_UID###)</li>
+###TEAM_PLAYER###
+</ul>
+###TEAM_PLAYERS###
+
+
+</p>
+###TEAM###
+
+
 ###PROFILE_STATS_LEAGUE###
 <h2>Spielerstatistik (needs T3sportstats)</h2>
 <dl class="dl-horizontal">
@@ -141,6 +158,7 @@ Bilder: ###PROFILE_PICTURES###
 	<dt>Karten (G/GR/R):</dt><dd>###PROFILE_STATS_REFEREE_CARDYELLOW###/###PROFILE_STATS_REFEREE_CARDYR###/###PROFILE_STATS_REFEREE_CARDRED###</dd>
 </dl>
 ###PROFILE_STATS_REFEREE###
+
 
 </div>
 <!-- ###PROFILE_VIEW### end-->
