--- a/views/templates/matchtable.html
+++ b/views/templates/matchtable.html
@@ -110,23 +110,7 @@ Spielplan für Schiedsrichter ###REFEREE_DCNAME###
 ###MATCH###
 </table>
 
-<!-- ###PAGEBROWSER### START -->
-<div class="t3sports-pagebrowser">
-###PAGEBROWSER_CURRENT_PAGE### Seite ###PAGEBROWSER_CURRENT_PAGE_NUMBER### ###PAGEBROWSER_CURRENT_PAGE###
-
-###PAGEBROWSER_NORMAL_PAGE### 
-###PAGEBROWSER_NORMAL_PAGE_LINK###Seite ###PAGEBROWSER_NORMAL_PAGE_NUMBER### ###PAGEBROWSER_NORMAL_PAGE_LINK###
-###PAGEBROWSER_NORMAL_PAGE###
-
-###PAGEBROWSER_PREV_PAGE###&nbsp;###PAGEBROWSER_PREV_PAGE_LINK###<###PAGEBROWSER_PREV_PAGE_LINK###&nbsp;###PAGEBROWSER_PREV_PAGE###
-
-###PAGEBROWSER_NEXT_PAGE###&nbsp;###PAGEBROWSER_NEXT_PAGE_LINK###>###PAGEBROWSER_NEXT_PAGE_LINK###&nbsp;###PAGEBROWSER_NEXT_PAGE###
-
-###PAGEBROWSER_FIRST_PAGE### ###PAGEBROWSER_FIRST_PAGE_LINK### |< ###PAGEBROWSER_FIRST_PAGE_LINK### ###PAGEBROWSER_FIRST_PAGE###
-
-###PAGEBROWSER_LAST_PAGE### ###PAGEBROWSER_LAST_PAGE_LINK### >| ###PAGEBROWSER_LAST_PAGE_LINK### ###PAGEBROWSER_LAST_PAGE###
-</div>
-<!-- ###PAGEBROWSER### END -->
+<!-- ### INCLUDE_TEMPLATE EXT:cfc_league_fe/Resources/Private/Templates/partials.html@DEFAULTPAGEBROWSER ### -->
 
 ###MATCHCOUNT### Spiele gefunden.
 ###MATCHS###
