- add marker "markClubsRunningGames" to league table

--- a/views/templates/leaguetable.html
+++ b/views/templates/leaguetable.html
@@ -98,7 +98,7 @@ Hinweis: Per TS können die Links und URLs zusätzlich gewrapped werden wobei ak
 </tr>
 
 ###ROW###
-<tr class="cfcleague-leaguetable-row###ROW_ROLL### ###ROW_MARKCLUB### cfcleague-leaguetable-row_###ROW_MARK###">
+<tr class="cfcleague-leaguetable-row###ROW_ROLL### ###ROW_MARKCLUB### ###ROW_MARKCLUBSISRUNNINGGAME### cfcleague-leaguetable-row_###ROW_MARK###">
   <td>###ROW_POSITION###. (###ROW_OLDPOSITION###)</td>
   <td>###ROW_LOGO### ###ROW_SHOWTEAMLINK######ROW_NAME######ROW_PENALTIES######ROW_SHOWTEAMLINK### (###ROW_SHOWMATCHTABLELINK######LABEL_MATCHTABLE######ROW_SHOWMATCHTABLELINK###)</td>
   <td>###ROW_MATCHCOUNT###</td>
